# Lexer

./: .clang-format  .gitignore
Lua/: CMakeLists.txt  main.cpp
Lua/src/ast/: node_headers.h
Lua/src/ast/nodes/: argument_list_node.cpp  argument_list_node.h  assignment_stat_node.cpp  assignment_stat_node.h  ast_node.cpp  ast_node.h  attribute_list_node.cpp  attribute_list_node.h  attribute_node.cpp  attribute_node.h  binary_op_node.cpp  binary_op_node.h  block_node.cpp  block_node.h  boolean_node.cpp  boolean_node.h  break_stat.cpp  break_stat.h  chunk_node.cpp  chunk_node.h  continue_stat.cpp  continue_stat.h  do_stat_node.cpp  do_stat_node.h  expression_list_node.cpp  expression_list_node.h  field_list_node.cpp  field_list_node.h  func_body_node.cpp  func_body_node.h  func_call_node.cpp  func_call_node.h  func_def_node.cpp  func_def_node.h  func_name_node.cpp  func_name_node.h  generic_for_stat_node.cpp  generic_for_stat_node.h  goto_stat_node.cpp  goto_stat_node.h  (+48 more)
Lua/src/ast/scope/: scope.h  scope_tree.cpp  scope_tree.h
Lua/src/ast/visitors/: ast_visitor.cpp  ast_visitor.h  eval_visitor.cpp  eval_visitor.h  format_visitor.cpp  format_visitor.h  json_visitor.cpp  json_visitor.h  refactor_visitor.cpp  refactor_visitor.h
Lua/src/parser/: ast.cpp  ast.h  lexer.cpp  lexer.h  location.cpp  location.h  parser.cpp  parser_2.cpp  parser_2.h
Lua/src/utilities/: ansi.h  assert.cpp  assert.h  compiler.h  json_builder.cpp  json_builder.h  math.cpp  math.h  node.cpp  node.h  string.cpp  string.h  util.cpp
Lua/tests/: output.lua  test_1.lua  test_2.lua  test_3.lua  test_4.lua
lua/: Base.h  BigInt.h  CMakeLists.txt  Generation.h  Kind.cpp  Kind.h  Node.cpp  Node.h  Parser.cpp  Parser.h  Tokenizer.h  generation.h  generation_old.h  main.cpp  parser.h  parser_old.h  parser_test.h  syntax_5.4_bnf.txt  test_1.txt  todo.txt  tokenizer.cpp  tokenizer.h
lua/include/: Base.h  Generation.h  Kind.h  Node.h  Number.h  Parser.h  Tokenizer.h  Util.h
lua/src/: Generation.cpp  Kind.cpp  Node.cpp  Parser.cpp  Tokenizer.cpp  Util.cpp
lua/tests/: output.lua  output_ast.lua  test_1.lua  test_2.lua  test_2.txt  test_3.lua
rewrite/: CMakeLists.txt  main.cpp
rewrite/src/: ASTNode.h  ASTVisitor.h  BinaryOpNode.cpp  BinaryOpNode.h  EvalVisitor.cpp  EvalVisitor.h  ExpressionNode.h  NumberNode.cpp  NumberNode.h
rewrite/src/ast/: argument_list_node.cpp  argument_list_node.h  assignment_stat_node.cpp  assignment_stat_node.h  ast_node.cpp  ast_node.h  ast_visitor.h  attribute_list_node.cpp  attribute_list_node.h  attribute_node.cpp  attribute_node.h  binary_op_node.cpp  binary_op_node.h  block_node.cpp  block_node.h  boolean_node.cpp  boolean_node.h  break_stat.cpp  break_stat.h  chunk_node.cpp  chunk_node.h  conditional_block_node.cpp  conditional_block_node.h  continue_stat.cpp  continue_stat.h  do_stat_node.cpp  do_stat_node.h  eval_visitor.cpp  eval_visitor.h  expression_list_node.cpp  expression_list_node.h  expression_node.h  field_list_node.cpp  field_list_node.h  for_stat_node.cpp  for_stat_node.h  func_body_node.cpp  func_body_node.h  func_call_node.cpp  func_call_node.h  (+57 more)
rewrite/src/ast/nodes/: argument_list_node.cpp  argument_list_node.h  assignment_stat_node.cpp  assignment_stat_node.h  ast_node.cpp  ast_node.h  attribute_list_node.cpp  attribute_list_node.h  attribute_node.cpp  attribute_node.h  binary_op_node.cpp  binary_op_node.h  block_node.cpp  block_node.h  boolean_node.cpp  boolean_node.h  break_stat.cpp  break_stat.h  chunk_node.cpp  chunk_node.h  continue_stat.cpp  continue_stat.h  do_stat_node.cpp  do_stat_node.h  expression_list_node.cpp  expression_list_node.h  field_list_node.cpp  field_list_node.h  func_body_node.cpp  func_body_node.h  func_call_node.cpp  func_call_node.h  func_def_node.cpp  func_def_node.h  func_name_node.cpp  func_name_node.h  generic_for_stat_node.cpp  generic_for_stat_node.h  goto_stat_node.cpp  (+49 more)
rewrite/src/other/: lua.bnf
rewrite/src/parser/: parser.cpp  parser.h  token_stream.cpp  token_stream.h
rewrite/src/tokenizer/: token_stream.h
rewrite/src/utilities/: assert.cpp  assert.h  math.cpp  math.h  string.cpp  string.h  util.cpp  util.h
rewrite/tests/: output.lua  output_ast.lua  test_1.lua  test_2.lua  test_3.lua
(+14 files in other folders)
